--- a/src/style/fonts.css
+++ b/src/style/fonts.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'Oxygen';
     src: url('fonts/Oxygen-webfont.eot');
     src: url('fonts/Oxygen-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/Oxygen-webfont.woff') format('woff'), url('fonts/Oxygen-webfont.ttf') format('truetype'), url('fonts/Oxygen-webfont.svg#OxygenRegular') format('svg');
@@ -46,6 +46,7 @@
     font-style: normal;
 }
 
+*/
 /* H1 should only be used on the title area of the UI. The total height is 70px with 5px lower border, so the font size, 
    padding, and margin are arranged to center it vertically within this height.*/
 
